--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,17 @@ dependencies = [
     "dj-database-url>=3.0.1",
     "django>=5.2.6",
     "djangorestframework>=3.16.1",
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.3",
+    "opencv-python>=4.11.0.86",
+    "pandas>=2.3.3",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.1.1",
+    "scikit-learn>=1.7.2",
+    "spotify>=0.10.2",
+    "spotipy>=2.25.1",
+    "tensorflow>=2.20.0",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
 ]
